[package]
name = "twist"
version = "0.1.0"
authors = ["Charlie Cummings <chc4000@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ramp = "*"
dyn-clone = "1.0.4"

[profile.release]
lto = true
debug = false
opt-level = 3
overflow-checks = true
panic = "abort"
